# agentmesh

./: .assay.yaml  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pilot.yaml  pyproject.toml
.agentmesh/: capabilities.json  policy.json
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: assay-pilot.yml  branch-protection-drift.yml  ci.yml  evidence-enforcement-monitor.yml  evidence-kpi.yml  lineage.yml  nightly-agentmesh-simulations.yml  pr-agentmesh-qa.yml  publish.yml  release-agentmesh-check.yml
docs/: CANARY_TOUCHPOINT.md  GAUNTLET_COMPILED_PACKET_PACK_V1.md  alpha-gate-report.md  alpha-gate-report.template.json  alpha-gate-runbook.md  evidence-wire-protocol-v0.md  license-policy.md  lineage-smoke-pr.md  public-private-boundary.md  public-private-decision-matrix.md  spec-meshpack-signing-v0.4.md
docs/naming/: THREADWORK_RENAME_MEMO.md  THREADWORK_SURFACE_INVENTORY.md  THREADWORK_TERMS.md
docs/pilot/: failure-modes.md  outreach.md  quickstart.md  scorecard.md  starter-workflow.yml
docs/spec/: cwe-v1.md
proto/: execution.proto
scripts/: alpha_gate_report.py  collect_canary_artifacts.py  episode.sh  evidence_kpi.py  sanitize_alpha_gate_report.py
src/agentmesh/: alpha_gate.py  assay_bridge.py  assay_pack.py  capsules.py  claims.py  cli.py  conflicts.py  db.py  episodes.py  events.py  evidence_kpi.py  gitbridge.py  keystore.py  mcp_server.py  messages.py  (+13 more)
tests/: conftest.py  test_alpha_gate.py  test_assay_bridge.py  test_assay_pack.py  test_canary_collector.py  test_canary_lane.py  test_capsules.py  test_claims.py  test_commit.py  test_conflicts.py  test_contention.py  test_db.py  test_doctor.py  test_e2e.py  test_episodes.py  test_events.py  test_evidence_kpi.py  test_ewp_compat.py  test_gitbridge.py  test_hooks.py  test_init.py  test_mcp_cli.py  test_mcp_server.py  test_messages.py  test_orch_cli.py  test_orch_lock_integration.py  test_orchestrator.py  test_parallel_demo.py  test_passport.py  test_provenance_export.py  test_public_private.py  test_release_check.py  test_replay_proto.py  test_secret_detection.py  test_shell_boundaries.py  test_spawner.py  test_status.py  test_task_bridge.py  test_task_flow.py  test_waiters.py  (+6 more)
trust/: BYPASS_POLICY.md  acceptance.yaml  signers.yaml
(+27 files in other folders)
