[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentmesh-core"
version = "0.4.0"
description = "Local-first multi-agent coordination and provenance for coding workflows"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Timmy Bhaserjian", email = "timmy@haserjian.com" },
]
keywords = ["ai", "agents", "coordination", "provenance", "lineage", "git", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/Haserjian/agentmesh"
Repository = "https://github.com/Haserjian/agentmesh"
Issues = "https://github.com/Haserjian/agentmesh/issues"
"CI Action" = "https://github.com/Haserjian/agentmesh-action"

[project.scripts]
agentmesh = "agentmesh.cli:app"
agentmesh-mcp = "agentmesh.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-tmp-files>=0.0.2",
]
mcp = [
    "mcp>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentmesh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
